--- a/index.html
+++ b/index.html
@@ -275,4 +275,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/main.js"></script>
-</body></html>
+</body>
+
+</html>
