--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MSI Landing Page</title>
     <meta name="Brandon Rankin" content="SitePoint">
+    <title>MSI Landing Page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css" />
@@ -196,6 +197,7 @@
 
         <!--        Mascot/ Dragon Collection        -->
 
+        <!--
         <section id="mascot" class="mascot-section">
             <h2 class="mascot-section-header">DRAGON COLLECTION</h2>
 
@@ -244,12 +246,98 @@
                 </a>
             </div>
         </section>
+-->
 
 
 
-        <!--        SLIDER ATEMPT        -->
+        <!--        DRAGON COLLECTION SLIDER        -->
 
-        <!--        END OF SLIDER ATEMPT        -->
+        <section id="mascot" class="mascot-section">
+
+            <h2 class="mascot-section-header">DRAGON COLLECTION</h2>
+
+            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
+                </ol>
+
+                <div class="carousel-inner">
+
+                    <div class="carousel-item active">
+                        <a href="https://www.msi.com/Collections/pages/Block-Dragon" target="_blank">
+                            <img src="https://asset.msi.com/resize/image/global/product/product_1_20170614133759_5940cbb7814ac.png62405b38c58fe0f07fcef2367d8a9ba1/1000.png" class="d-block w-100" alt="Block Dragon">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Block Dragon</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="carousel-item">
+                        <a href="https://www.msi.com/Collections/pages/MSI-Sport-Towel" target="_blank">
+                            <img src="https://asset.msi.com/resize/image/global/product/product_1_20190708115344_5d22be484933e.png62405b38c58fe0f07fcef2367d8a9ba1/1000.png" class="d-block w-100" alt="MSI Sport Towel">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>MSI Sport Towel</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="carousel-item">
+                        <a href="https://www.msi.com/Collections/pages/Lucky-Costume-Hat" target="_blank">
+                            <img src="https://asset.msi.com/resize/image/global/product/product_8_20170614134101_5940cc6d54f0b.png62405b38c58fe0f07fcef2367d8a9ba1/1000.png" class="d-block w-100" alt="Lucky Costume Hat">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Lucky Costume Hat</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="carousel-item">
+                        <a href="https://www.msi.com/Collections/pages/Dragon-Lucky-Key-Ring" target="_blank">
+                            <img src="https://asset.msi.com/resize/image/global/product/five_pictures1_3322_20141217144542.png62405b38c58fe0f07fcef2367d8a9ba1/1000.png" class="d-block w-100" alt="Dragon Lucky Key Ring">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Dragon Lucky Key Ring</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="carousel-item">
+                        <a href="https://www.msi.com/Collections/pages/Lucky-Edge-of-the-Cup" target="_blank">
+                            <img src="https://asset.msi.com/resize/image/global/product/product_10_20170614133844_5940cbe4c25cf.png62405b38c58fe0f07fcef2367d8a9ba1/1000.png" class="d-block w-100" alt="Lucky Edge of the Cup">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Lucky Edge of the Cup</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="carousel-item">
+                        <a href="https://www.msi.com/Collections/pages/Lucky-Figure-ROTOCAST" target="_blank">
+                            <img src="https://asset.msi.com/resize/image/global/product/product_7_20170614133944_5940cc20f0459.png62405b38c58fe0f07fcef2367d8a9ba1/1000.png" class="d-block w-100" alt="Lucky Figure Rotocast">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Lucky Figure Rotocast</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </section>
+
+
+
+
+        <!--        END OF DRAGON COLLECTION SLIDER        -->
 
 
 
@@ -274,6 +362,7 @@
         </footer>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
 
