--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <body>
     <div id="page-wrapper">
 
+
         <!--        HEADER WITH NAVBAR AND BANNER        -->
+
 
         <header id="header">
             <div class="logo">
@@ -41,7 +43,9 @@
             <img id="banner-img" src="https://storage-asset.msi.com/global/picture/banner/banner_15807985895e39127dbfee3.jpg" alt="MSI Banner">
         </div>
 
+
         <!--        Monitors Section        -->
+
 
         <section id="new-products" class="new-products-section">
             <h2 class="new-products-section-header">MONITORS</h2>
@@ -92,7 +96,9 @@
             </div>
         </section>
 
+
         <!--        Laptops Section        -->
+
 
         <section id="laptops" class="laptops-section">
             <h2 class="laptops-section-header">LAPTOPS</h2>
@@ -144,7 +150,9 @@
             </div>
         </section>
 
+
         <!--        Desktops Section        -->
+
 
         <section id="desktops" class="desktops-section">
             <h2 class="desktops-section-header">DESKTOPS</h2>
@@ -195,7 +203,9 @@
             </div>
         </section>
 
+
         <!--        DRAGON COLLECTION SLIDER        -->
+
 
         <section id="mascot" class="mascot-section">
 
@@ -280,10 +290,7 @@
         </section>
 
 
-
-
-        <!--        END OF DRAGON COLLECTION SLIDER        -->
-
+        <!--        FOOTER        -->
 
 
         <footer id="footer">
@@ -308,7 +315,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
