--- a/index.html
+++ b/index.html
@@ -53,42 +53,42 @@
             <div class="new-products-grid">
 
                 <a href="https://us.msi.com/Monitor/Optix-MAG274QRF-QD/Overview" target="_blank" class="new-products new-products-tile">
-                    <img id="monitors-img-1" src="https://asset.msi.com/resize/image/global/product/product_2_20200910132042_5f59b7aa3481c.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="new-products-image" alt="Optix MAG274QRF-QD" />
+                    <img id="monitors-img-1" src="img/monitor-1.png" class="new-products-image" alt="Optix MAG274QRF-QD" />
                     <p class="new-products-title">
                         Optix MAG274QRF-QD
                     </p>
                 </a>
 
                 <a href="https://us.msi.com/Monitor/Optix-MAG301CR" target="_blank" class="new-products new-products-tile">
-                    <img id="monitors-img-2" src="https://asset.msi.com/resize/image/global/product/product_1_20200130115444_5e3253849a925.png62405b38c58fe0f07fcef2367d8a9ba1/600.png" class="new-products-image" alt="Optix MAG301CR" />
+                    <img id="monitors-img-2" src="img/monitor-2.png" class="new-products-image" alt="Optix MAG301CR" />
                     <p class="new-products-title">
                         Optix MAG301CR
                     </p>
                 </a>
 
                 <a href="https://us.msi.com/Monitor/Optix-MAG271VCR/Overview" target="_blank" class="new-products new-products-tile">
-                    <img id="monitors-img-3" src="https://asset.msi.com/resize/image/global/product/product_0_20200714105634_5f0d1ee2e98bc.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="new-products-image" alt="Optix MAG271VCR" />
+                    <img id="monitors-img-3" src="img/monitor-3.png" class="new-products-image" alt="Optix MAG271VCR" />
                     <p class="new-products-title">
                         Optix MAG271VCR
                     </p>
                 </a>
 
                 <a href="https://us.msi.com/Monitor/Optix-MAG322CR" target="_blank" class="new-products new-products-tile">
-                    <img id="monitors-img-4" src="https://asset.msi.com/resize/image/global/product/product_3_20191018133649_5da94f71a767d.png62405b38c58fe0f07fcef2367d8a9ba1/600.png" class="new-products-image" alt="Optix MAG322CR" />
+                    <img id="monitors-img-4" src="img/monitor-4.png" class="new-products-image" alt="Optix MAG322CR" />
                     <p class="new-products-title">
                         Optix MAG322CR
                     </p>
                 </a>
 
                 <a href="https://us.msi.com/Monitor/Optix-MAG342CQRV" target="_blank" class="new-products new-products-tile">
-                    <img id="monitors-img-5" src="https://asset.msi.com/resize/image/global/product/product_8_20200724141747_5f1a7d0b3942f.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="new-products-image" alt="Optix MAG342CQRV" />
+                    <img id="monitors-img-5" src="img/monitor-5.png" class="new-products-image" alt="Optix MAG342CQRV" />
                     <p class="new-products-title">
                         Optix MAG342CQRV
                     </p>
                 </a>
 
                 <a href="https://us.msi.com/Monitor/Optix-MAG272CRX" target="_blank" class="new-products new-products-tile">
-                    <img id="monitors-img-6" src="https://asset.msi.com/resize/image/global/product/product_7_20190904101851_5d6f1f0b3385b.png62405b38c58fe0f07fcef2367d8a9ba1/600.png" class="new-products-image" alt="Optix MAG272CRX" />
+                    <img id="monitors-img-6" src="img/monitor-6.png" class="new-products-image" alt="Optix MAG272CRX" />
                     <p class="new-products-title">
                         Optix MAG272CRX
                     </p>
@@ -106,42 +106,42 @@
             <div class="laptops-grid">
 
                 <a href="https://us.msi.com/Business-Productivity/Prestige-15-A11X/Overview" target="_blank" class="laptops laptops-tile">
-                    <img id="laptops-img-1" src="https://asset.msi.com/resize/image/global/product/product_7_20200828140905_5f489f8177f3f.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="laptops-image" alt="Prestige 15" />
+                    <img id="laptops-img-1" src="img/laptop-1.png" class="laptops-image" alt="Prestige 15" />
                     <p class="laptops-title">
                         Prestige 15
                     </p>
                 </a>
 
                 <a href="https://us.msi.com/Business-Productivity/Prestige-14-A11X/Overview" target="_blank" class="laptops laptops-tile">
-                    <img id="laptops-img-2" src="https://storage-asset.msi.com/global/picture/image/feature/nb/Prestige/Prestige14-mix-upgrade/images/craftsmanship-prestige14.png" class="laptops-image" alt="Prestige 14" />
+                    <img id="laptops-img-2" src="img/laptop-2.png" class="laptops-image" alt="Prestige 14" />
                     <p class="laptops-title">
                         Prestige 14
                     </p>
                 </a>
 
                 <a href="https://us.msi.com/Laptop/Stealth-15M-A11SX/Gallery" target="_blank" class="laptops laptops-tile">
-                    <img id="laptops-img-3" src="https://asset.msi.com/resize/image/us/product/product_0_20200912084521_5f5c1a210acf3.PNG62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="laptops-image" alt="Stealth 15M" />
+                    <img id="laptops-img-3" src="img/laptop-3.png" class="laptops-image" alt="Stealth 15M" />
                     <p class="laptops-title">
                         Stealth 15M
                     </p>
                 </a>
 
                 <a href="https://us.msi.com/Workstation/WF65-10TX" target="_blank" class="laptops laptops-tile">
-                    <img id="laptops-img-4" src="https://asset.msi.com/resize/image/global/product/product_4_20200506181422_5eb28dfe3b6f5.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="laptops-image" alt="WF65 10TX" />
+                    <img id="laptops-img-4" src="img/laptop-4.png" class="laptops-image" alt="WF65 10TX" />
                     <p class="laptops-title">
                         WF65 10TX
                     </p>
                 </a>
 
                 <a href="https://us.msi.com/Laptop/GS66-Stealth-10SX/Overview" target="_blank" class="laptops laptops-tile">
-                    <img id="laptops-img-5" src="https://asset.msi.com/resize/image/global/product/product_7_20200309093032_5e659c3820186.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="laptops-image" alt="GS66 Stealth" />
+                    <img id="laptops-img-5" src="img/laptop-5.png" class="laptops-image" alt="GS66 Stealth" />
                     <p class="laptops-title">
                         GS66 Stealth
                     </p>
                 </a>
 
                 <a href="https://us.msi.com/Content-Creation/Creator-17-A10SX" target="_blank" class="laptops laptops-tile">
-                    <img id="laptops-img-6" src="https://asset.msi.com/resize/image/global/product/product_9_20200323182502_5e788e7ebd245.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="laptops-image" alt="Creator 17 A10SX" />
+                    <img id="laptops-img-6" src="img/laptop-6.png" class="laptops-image" alt="Creator 17 A10SX" />
                     <p class="laptops-title">
                         Creator 17 A10SX
                     </p>
@@ -160,42 +160,42 @@
             <div class="desktops-grid">
 
                 <a href="https://us.msi.com/Desktop/Infinite-X-Plus-9th" target="_blank" class="desktops desktops-tile">
-                    <img id="desktops-img-1" src="https://asset.msi.com/resize/image/global/product/product_5_20190108150255_5c344b1f0f2a2.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="desktops-image" alt="Infinite X Plus 9th" />
+                    <img id="desktops-img-1" src="img/desktop-1.png" class="desktops-image" alt="Infinite X Plus 9th" />
                     <p class="desktops-title">
                         Infinite X Plus 9th
                     </p>
                 </a>
 
                 <a href="https://us.msi.com/Desktop/Aegis-Ti3-8th" target="_blank" class="desktops desktops-tile">
-                    <img id="desktops-img-2" src="https://asset.msi.com/resize/image/global/product/product_7_20180522154025_5b03c96952382.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="desktops-image" alt="Aegis Ti3 8th" />
+                    <img id="desktops-img-2" src="img/desktop-2.png" class="desktops-image" alt="Aegis Ti3 8th" />
                     <p class="desktops-title">
                         Aegis Ti3 8th
                     </p>
                 </a>
 
                 <a href="https://us.msi.com/Desktop/Codex-R-10th-GeForce-RTX%E2%84%A2-30-Series/Overview" target="_blank" class="desktops desktops-tile">
-                    <img id="desktops-img-3" src="https://asset.msi.com/resize/image/us/product/product_2_20200324021408_5e78fc700ce00.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="desktops-image" alt="Codex R 10th" />
+                    <img id="desktops-img-3" src="img/desktop-3.png" class="desktops-image" alt="Codex R 10th" />
                     <p class="desktops-title">
                         Codex R 10th
                     </p>
                 </a>
 
                 <a href="https://us.msi.com/Desktop/Aegis-R/Overview" target="_blank" class="desktops desktops-tile">
-                    <img id="desktops-img-4" src="https://asset.msi.com/resize/image/us/product/product_8_20200317081830_5e7017566d522.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="desktops-image" alt="Aegis R" />
+                    <img id="desktops-img-4" src="img/desktop-4.png" class="desktops-image" alt="Aegis R" />
                     <p class="desktops-title">
                         Aegis R
                     </p>
                 </a>
 
                 <a href="https://us.msi.com/Desktop/Trident-A-Plus-9th" target="_blank" class="desktops desktops-tile">
-                    <img id="desktops-img-5" src="https://asset.msi.com/resize/image/us/product/product_6_20191012055952_5da0fb5803acf.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="desktops-image" alt="Trident A Plus 9th" />
+                    <img id="desktops-img-5" src="img/desktop-5.png" class="desktops-image" alt="Trident A Plus 9th" />
                     <p class="desktops-title">
                         Trident A Plus 9th
                     </p>
                 </a>
 
-                <a href="https://us.msi.com/Desktop/Prestige-P100-9th" target="_blank" class="desktops desktops-tile">
-                    <img id="desktops-img-6" src="https://asset.msi.com/resize/image/global/product/product_2_20190729154208_5d3ea35052939.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="desktops-image" alt="Prestige P100 9th" />
+                <a href="https://us.msi.com/Content-Creation-PC/Prestige-P100-9th" target="_blank" class="desktops desktops-tile">
+                    <img id="desktops-img-6" src="img/desktop-6.png" class="desktops-image" alt="Prestige P100 9th" />
                     <p class="desktops-title">
                         Prestige P100 9th
                     </p>
@@ -313,8 +313,8 @@
             </div>
         </footer>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
