Fix bug: images not reloading on page resize

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 
 
-<body>
-    <div id="page-wrapper">
+<body onresize="window.location.href = window.location.href">
+        <div id="page-wrapper">
 
 
         <!--        HEADER WITH NAVBAR AND BANNER        -->
