--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 
 <html lang="en">
 
@@ -120,7 +120,7 @@
                 </a>
 
                 <a href="https://us.msi.com/Laptop/Stealth-15M-A11SX/Gallery" target="_blank" class="laptops laptops-tile">
-                    <img id="laptops-img-3" src="https://asset.msi.com/resize/image/us/product/product_0_20200912084521_5f5c1a210acf3.PNG62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="laptops-image" alt="Stealth 15M" />
+                    <img id="laptops-img-3" src="https://asset.msi.com/resize/image/us/product/product_5_20200912084521_5f5c1a21cad19.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" class="laptops-image" alt="Stealth 15M" />
                     <p class="laptops-title">
                         Stealth 15M
                     </p>
